--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -48,3 +48,15 @@
 .active {
     transform: rotate(-10deg);
 }
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+  .menu__container--list li > a {
+    font-size: 2rem;
+    margin: 0.5rem;
+  }
+  .active {
+    transform: rotate(-5deg);
+  }
+}
