--- a/src/scss/pages/_works.scss
+++ b/src/scss/pages/_works.scss
@@ -62,7 +62,6 @@
 
                 @include media-query(lap-and-up) {
                     max-height: 200px;
-                    min-width: 300px;
                 }
             }
             figcaption {
